--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,6 @@ import Education from "../components/Education.astro";
 import Footer from "../components/Footer.astro";
 import { siteConfig } from "../config";
 import "../styles/global.css";
-import photo_svg from "/public/favicon.svg/"
 ---
 
 <html lang="en">
@@ -26,7 +25,7 @@ import photo_svg from "/public/favicon.svg/"
     <meta property="og:url" content="https://boburallayorov.uz/" />
     <meta property="og:title" content={`${siteConfig.name} - ${siteConfig.title}`} />
     <meta property="og:description" content={siteConfig.description} />
-    <meta property="og:image" content="https://yourwebsite.com/preview-image.jpg" />
+    <meta property="og:image" content="https://www.boburallayorov.uz/favicon.svg/" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
