--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,11 @@ import "../styles/global.css";
     <meta property="og:url" content="https://boburallayorov.uz/" />
     <meta property="og:title" content={`${siteConfig.name} - ${siteConfig.title}`} />
     <meta property="og:description" content={siteConfig.description} />
-    <meta property="og:image" content="https://www.boburallayorov.uz/favicon.svg/" />
+    <meta property="og:image" content="https://boburallayorov.uz/preview.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="twitter:card" content="summary_large_image" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
